Close todo 98: migrate its durable knowledge into .kb/vec.md
All three deliverables of "an example that actually shows the --simd win"
shipped: examples/ml/simd-dot.lisp, simd-gemv.lisp and tiny-llm.lisp are
registered and green in ExamplesE2eTest. What was left in the file was a
measurement log, and after todo-106 most of it described a world that no longer
exists -- five tables built on the convert(F2D) emulation cliff, with two
retracted rankings layered on top. A reader could no longer tell which lines
were still true.

Migrate the three things that are still true and had no other home into a new
.kb/vec.md section, "Writing a --simd example or benchmark":

  - the constraints (THRESHOLD compares the ROW LENGTH, not the element count;
    print integers only because WASM floats never compare; get-internal-real-time
    is ms and internal-time-units-per-second does not exist; --no-gc cannot
    compile linalg: at all; the interpreter time budget; the spurious
    ExamplesE2eTest failure)
  - the benchmarking discipline (run sequentially, N>=9 samples printed in full
    because a GraalVM timing was bimodal, EpsilonGC for allocation, zsh does not
    word-split an unquoted $FLAGS)
  - "vary the axis you are not thinking about": five experiments agreed that
    GraalVM cannot vectorize because every one of them used #f

The rest already has a home. The convert(F2D) history and oracle/graal#10285 are
in .kb/vec.md's acceleration-layer-0 section; the post-106 numbers are there too;
the KV-cache layout is documented in tiny-llm.lisp's own header. The full log
stays reachable as `git show 3df64eb:.todo/98-simd-showcase-example.md`, cited
from the new section.

Repoint .todo/99's two references at the examples they actually meant.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RDAGDZuq6LT7KMLxR9RDP5